--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5dfb9">  <td>22/03/13 07:26:39</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.DataSetup()[pri:0, instance:testcases.LoginTest@c88a337]">&gt;&gt;DataSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
-<tr bgcolor="a5dfb9">  <td>22/03/13 07:27:08</td>   <td>28221</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.DataTearDown()[pri:0, instance:testcases.LoginTest@c88a337]">&lt;&lt;DataTearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/03/13 07:27:02</td>   <td>22948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.ExternalDataTest()[pri:0, instance:testcases.LoginTest@c88a337]">ExternalDataTest</td> 
-  <td>main@517254671</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/03/13 07:26:43</td>   <td>3927</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTest()[pri:0, instance:testcases.LoginTest@c88a337]">LoginFailureTest</td> 
-  <td>main@517254671</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/03/13 07:26:54</td>   <td>14227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccessTest()[pri:0, instance:testcases.LoginTest@c88a337]">LoginSuccessTest</td> 
-  <td>main@517254671</td>   <td></td> </tr>
-<tr bgcolor="a5dfb9">  <td>22/03/13 07:27:00</td>   <td>20188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.reflect.Method)[pri:0, instance:testcases.LoginTest@c88a337]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
-<tr bgcolor="a5dfb9">  <td>22/03/13 07:27:00</td>   <td>20188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.reflect.Method)[pri:0, instance:testcases.LoginTest@c88a337]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
-<tr bgcolor="a5dfb9">  <td>22/03/13 07:27:00</td>   <td>20188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.reflect.Method)[pri:0, instance:testcases.LoginTest@c88a337]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
-<tr bgcolor="a5dfb9">  <td>22/03/13 07:27:07</td>   <td>27985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.LoginTest@c88a337]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
-<tr bgcolor="a5dfb9">  <td>22/03/13 07:27:07</td>   <td>27985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.LoginTest@c88a337]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
-<tr bgcolor="a5dfb9">  <td>22/03/13 07:27:07</td>   <td>27985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.LoginTest@c88a337]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/28 05:46:22</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.DataSetup()[pri:0, instance:testcases.LoginTest@593aaf41]">&gt;&gt;DataSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/28 05:46:51</td>   <td>28636</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.DataTearDown()[pri:0, instance:testcases.LoginTest@593aaf41]">&lt;&lt;DataTearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="7e949d">  <td>22/03/28 05:46:45</td>   <td>22267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.ExternalDataTest()[pri:0, instance:testcases.LoginTest@593aaf41]">ExternalDataTest</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="7e949d">  <td>22/03/28 05:46:26</td>   <td>3892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTest()[pri:0, instance:testcases.LoginTest@593aaf41]">LoginFailureTest</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="7e949d">  <td>22/03/28 05:46:37</td>   <td>14161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccessTest()[pri:0, instance:testcases.LoginTest@593aaf41]">LoginSuccessTest</td> 
+  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/28 05:46:42</td>   <td>19540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.reflect.Method)[pri:0, instance:testcases.LoginTest@593aaf41]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/28 05:46:42</td>   <td>19540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.reflect.Method)[pri:0, instance:testcases.LoginTest@593aaf41]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/28 05:46:42</td>   <td>19540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.reflect.Method)[pri:0, instance:testcases.LoginTest@593aaf41]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/28 05:46:51</td>   <td>28416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.LoginTest@593aaf41]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/28 05:46:51</td>   <td>28416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.LoginTest@593aaf41]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/28 05:46:51</td>   <td>28416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.LoginTest@593aaf41]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@1528195520</td>   <td></td> </tr>
 </table>
